--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,7 +1,7 @@
+{% load static %}
 <!DOCTYPE html> <!-- Используется html 5 версии -->
 <html lang="ru"> <!-- Язык сайта - русский -->
   <head>
-    {% load static %}
     <meta charset="utf-8"> <!-- Кодировка сайта -->
     <!-- Сайт готов работать с мобильными устройствами -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,9 +21,11 @@
       {% include "includes/header.html" %}
     </header>
     <main>
-      {% block content %}
-        Контент не подвезли :(
-      {% endblock %}
+      <div class="container py-5">
+        {% block content %}
+          Контент не подвезли :(
+        {% endblock %}
+      </div>
     </main>
     <footer class="border-top text-center py-3">
       {% include "includes/footer.html" %}
