fix structure code.

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -18,7 +18,7 @@
         </li>
       </ul>
       <p>{{ post.text }}</p>
-      {% if post.group is not None %}
+      {% if post.group %}
         <a href="{% url 'posts:group_list' post.group.slug %}">
           все записи группы
         </a>
