--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title> {% block tittle%} Tittle нет :((( {% endblock %}</title>
+    <title> {% block title%} Tittle нет :((( {% endblock %}</title>
   </head>
   <body>
     <header>
