--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 
 {% block title %}
   Пост {{ post.text|truncatechars:cut_str }}
 {% endblock %}
 
 {% block content %}
+<div class="row">
 <aside class="col-12 col-md-3">
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
@@ -32,6 +34,9 @@
   </ul>
 </aside>
 <article class="col-12 col-md-9">
+  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
   <p>{{ post.text }}</p>
   {% if post.author == request.user %}
     <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
@@ -39,4 +44,5 @@
     </a>
   {% endif %}
 </article>
+</div>
 {% endblock %}
