--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
+{% load user_filters %}
 
 {% block title %}
   Пост {{ post.text|truncatechars:cut_str }}
@@ -44,12 +45,11 @@
     </a>
   {% endif %}
 
-  {% load user_filters %}
   {% if user.is_authenticated %}
     <div class="card my-4">
       <h5 class="card-header">Добавить комментарий:</h5>
       <div class="card-body">
-        <form method="post">
+        <form method="post" action="{% url 'posts:add_comment' post.id %}">
           {% csrf_token %}
           <div class="form-group mb-2">
             {{ form.text|addclass:"form-control" }}
