--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,14 +7,17 @@
 
 {% block content %}
   <h1>{{ title }}</h1>
-  {% for post in page_obj %}
-    {% include 'posts/includes/post_list.html' %}
-    {% if post.group %}
-      <a href="{% url 'posts:group_list' post.group.slug %}">
-        все записи группы
-      </a>
-    {% endif %}
+  {% load cache %}
+  {% cache 20 index_page page_obj.number %}
+    {% for post in page_obj %}
+      {% include 'posts/includes/post_list.html' %}
+      {% if post.group %}
+        <a href="{% url 'posts:group_list' post.group.slug %}">
+          все записи группы
+        </a>
+      {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
-  {% endfor %}
+    {% endfor %}
+  {% endcache %}
   {% include 'posts/includes/paginator.html' %}
 {% endblock %}
