--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -14,10 +14,10 @@
     </ul>
   </aside>
   <article class="col-12 col-md-9">
-    <p>На этой странице можно рассказать,
-       какие программные инструменты вы применили для создания этого сайта,
-       какие навыки вам помогли, с чем вы хорошо разобрались, а с чем — не очень.
-       Картинки и нестандартные подходы приветствуются: эта страница может получиться очень интересной.</p>
+    <p>
+        Во время работы над данным проектом я использовал Django версии 2.2.19 и
+        Python версии 3.9.7. Познакомился с оформлением страниц и немного с бэком.
+    </p>
   </article>
 </div>
 {% endblock %} 
